edit warna humberger

--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.hamburger-line {
+    @apply w-[30px] h-[2px] my-2 block bg-slate-800 dark:bg-slate-100;
+}
